# calm-todo

./: .env.example  .gitignore  AGENTS.md  KANAE_REMINDER_INTEGRATION.md  README.md  fix-template.js  index.html  migrate.html  package-lock.json  package.json  vite.config.ts  write.js
.codex/: settings.json
docs/: REQUIREMENTS.md
public/: manifest.json  quick-add.html  sw.js
scripts/: update-version.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BoardView.tsx  Sidebar.tsx
src/components/auth/: AuthProvider.tsx
src/components/icons/: GoogleIcon.tsx  index.tsx
src/components/layout/: Header.module.css  Header.tsx  MainLayout.module.css  MainLayout.tsx  Sidebar.module.css  Sidebar.tsx
src/components/settings/: KanaeReminderSettings.tsx
src/components/tasks/: TaskInput.module.css  TaskInput.tsx  TaskItem.module.css  TaskItem.tsx  TaskList.tsx
src/hooks/: useCalendar.ts  useKarma.ts  usePlanning.ts  useProjects.ts  useTodos.ts  useUIState.ts
src/lib/: claude.ts  discord.ts  firebase.ts  gemini.ts  icsParser.ts  kanaePersona.ts  openai.ts  parseNaturalLanguage.ts  prompts.ts  storage.ts  tavily.ts  utils.ts
src/pages/: LoginPage.module.css  LoginPage.tsx  TasksPage.module.css  TasksPage.tsx
src/services/: plan.ts  reminder.ts
src/stores/: authStore.ts  projectStore.ts  taskStore.ts
src/styles/: index.css
src/types/: index.ts  todo.ts
src/utils/: updateChecker.ts
(+14 files in other folders)
